[package]
name = "usb-rfid-decoder"
version = "0.2.0"
edition = "2021"
authors = ["Philip Barlow"]
description = "A simple character decoder for USB RFID readers"
license = "MIT"
repository = "https://github.com/bitbrain-za/usb-rfid-rs"
homepage = "https://github.com/bitbrain-za/usb-rfid-rs"
readme = "README.md"
keywords = ["usb", "rfid", "hid", "barcode"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
